# CEIA-PEIA

./: README.md  pyproject.toml
TP1/: Datos_primer_TP_20Co2025_i0601.xlsx  TP1.ipynb  pyproject.toml
TP2/: TP2.ipynb
TP3/: Grupo_3.xlsx  TP3.ipynb  TP3_Grupo3.tex
