[project]
name = "ceia-peia"
version = "0.1.0"
description = "CEIA-Probabilidad y Estadistica"
authors = [
    {name = "Martin",email = "martinbrocca@gmail.com"}
]
readme = "README.md"
requires-python = ">3.11"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "notebook (>=7.4.1,<8.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "tabulate (>=0.9.0,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
