[project]
name = "peia-tp1"
version = "0.1.0"
description = "Trabajo Practico N1 - CEIA - Probabilidad y Estadistica"
authors = [
    {name = "Martin Brocca",email = "martinbrocca@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "nbconvert (>=7.16.6,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
